category,fooditem done

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -48,8 +48,12 @@ header h1 {
     margin: 0;
 }
 
+.text-primary{
+    text-align: center;
+}
+
 /* Cards Styles */
-.card {
+/* .card {
     border-radius: 10px;
     transition: transform 0.3s ease;
 }
@@ -59,10 +63,10 @@ header h1 {
 }
 
 /* Table Styles */
-table {
+/* table {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 table th, table td {
     vertical-align: middle;
-}
+} */
