--- a/css/admin_table.css
+++ b/css/admin_table.css
@@ -44,12 +44,14 @@ h2 {
     font-weight: 600;
 }
 
-.table tr:nth-child(even) {
+.table tr:nth-child(even) td {
     background-color: #f2f2f2;
 }
 
-.table tr:hover {
+.table tbody tr:hover td {
     background-color: #e9ecef;
+    transition: background-color 0.3s ease;
+
 }
 
 .table td {
