--- a/css/dp_reg.css
+++ b/css/dp_reg.css
@@ -10,7 +10,7 @@ body {
 }
 
 .container {
-    margin-top: 40px;
+    /* margin-top: 40px; */
     width: 100%;
     max-width: 600px; /* Adjust width to your needs */
     padding: 20px;
@@ -39,6 +39,17 @@ h3{
     flex-direction: column;
     margin-bottom: 15px; /* Space between rows */
     padding-right: 10px; /* Space between columns */
+    position: relative;
+    /* margin-bottom: 12px; */
+}
+
+.col-md-6 i{
+    position: absolute;
+    left: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    color: #ccc;
+    font-size: 16px;
 }
 
 .col-md-6:nth-of-type(odd) {
@@ -48,6 +59,9 @@ h3{
 .col-md-6 input,
 .col-md-6 select {
     width: 100%; /* Make inputs and selects fill the column width */
+    padding: 10px 10px 10px 22px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
 }
 
 .col-4 {
@@ -60,6 +74,43 @@ h3{
     width: auto; /* Button width adjusted to its content */
 }
 
-label{
+/* label{
     font-weight: bold;
+} */
+
+span{
+    color: #fff;
+    text-align: center;
+}
+
+form a{
+    text-decoration: none;
+    color: #45a049;
+}
+
+form a:hover {
+    text-decoration: underline;
+}
+
+/* button css */
+/* .button-group {
+    text-align: center;
+    margin-top: 10px;
+} */
+
+.col-md-6 button{
+    flex-basis: 100%;
+    margin: 0 60px;
+    padding: 14px 20px;
+    border-radius: 15px;
+    text-align: center;
+    background-color: #01896e;
+    color: #fff;
+    border: none;
+    outline: 0;
+    cursor: pointer;
+    }
+
+.col-md-6 button:hover{
+    transform: scale(1.03);
 }
