--- a/css/login.css
+++ b/css/login.css
@@ -23,7 +23,7 @@ body{
     align-items: center; 
     height: max-content;
     margin: 0 auto;
-    padding: 24px;
+    padding: 100px;
   }
   /* End */
   
@@ -60,6 +60,8 @@ body{
   
   /* For Login */
   .group-login {
+    position: relative;
+    width: 100%;
     margin-bottom: 25px;
   }
   
@@ -68,18 +70,39 @@ body{
     margin-bottom: 10px;
     font-weight: bold;
   }
+
+.group-login i {
+    position: absolute;
+    left: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    color: #ccc;
+    font-size: 16px;
+}
   /* End */
   
   /* For Registration */
   .group-loginn {
+    position: relative;
+    width: 100%;
     margin-bottom: 12px;
   }
   
   .labell {
     display: block;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
     font-weight: bold;
   }
+
+  .group-loginn i {
+    position: absolute;
+    left: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    color: #ccc;
+    font-size: 16px;
+}
+
   /* End */
   
   input[type="text"],
@@ -87,7 +110,7 @@ body{
   input[type="email"],
   input[type="password"] {
     width: 100%;
-    padding: 10px;
+    padding: 10px 10px 10px 35px;
     border: 1px solid #ccc;
     border-radius: 4px;
   }
