--- a/css/adminpanel.css
+++ b/css/adminpanel.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: 'Arial', sans-serif;
-  background-color: #f4f4f4;
+  background-color: #d9f2ee;
 }
 
 .navbar {
@@ -14,13 +14,19 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 10px 20px;
-  background-color: #0adddde1;
+  background-color: #0ac1dde1;
   color: white;
 }
 
 .logo img {
   width: 50px;
   height: auto;
+}
+
+.logoo{
+  height: 100%;
+  width: 250px;
+  padding-left: 15px;
 }
 
 .nav-links {
