--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body{
     display: flex;
     flex-direction: column;
     min-height: 100%;
+    font-family: "Inter", "Segoe UI", Arial, sans-serif;
 }
 
 /* CSS for header section */
